--- a/tools/docker/specs/resnet50v1-5-fp32-training_spec.yml
+++ b/tools/docker/specs/resnet50v1-5-fp32-training_spec.yml
@@ -18,6 +18,7 @@ slice_sets:
           documentation:
               name: README.md
               uri: models/quickstart/image_recognition/tensorflow/resnet50v1_5/training/fp32
+              k8s_uri: models/k8s/image_recognition/tensorflow/resnet50v1_5/training/fp32
               text_replace:
                 <model name>: ResNet50 v1.5
                 <precision>: FP32
@@ -26,26 +27,38 @@ slice_sets:
                 <package url>: https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_1_0/resnet50v1-5-fp32-training.tar.gz
                 <package name>: resnet50v1-5-fp32-training.tar.gz
                 <package dir>: resnet50v1-5-fp32-training
+                <k8s package url>: https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_1_0/resnet50v1-5-fp32-training-k8s.tar.gz
+                <k8s package name>: resnet50v1-5-fp32-training-k8s.tar.gz
+                <k8s package dir>: resnet50v1-5-fp32-training-k8s
                 <docker image>: intel/image-recognition:tf-2.3.0-imz-2.1.0-resnet50v1-5-fp32-training
               docs:
                   - name: Title
                     uri: models/quickstart/image_recognition/tensorflow/resnet50v1_5/training/fp32/.docs/title.md
+                    k8s_uri: models/k8s/image_recognition/tensorflow/resnet50v1_5/training/fp32/.docs/title.md
                   - name: Description
                     uri: models/quickstart/image_recognition/tensorflow/resnet50v1_5/training/fp32/.docs/description.md
+                    k8s_uri: models/k8s/image_recognition/tensorflow/resnet50v1_5/training/fp32/.docs/description.md
                   - name: Download link
                     uri: models/quickstart/image_recognition/tensorflow/resnet50v1_5/training/fp32/.docs/download.md
+                    k8s_uri: models/k8s/image_recognition/tensorflow/resnet50v1_5/training/fp32/.docs/download.md
+                  - name: Datasets
+                    k8s_uri: models/k8s/image_recognition/tensorflow/resnet50v1_5/training/fp32/.docs/datasets.md
                   - name: Quick Start Scripts
                     uri: models/quickstart/image_recognition/tensorflow/resnet50v1_5/training/fp32/.docs/quickstart.md
                   - name: Bare Metal
                     uri: models/quickstart/image_recognition/tensorflow/resnet50v1_5/training/fp32/.docs/baremetal.md
                   - name: Docker
                     uri: models/quickstart/image_recognition/tensorflow/resnet50v1_5/training/fp32/.docs/docker.md
+                  - name: Kubernetes
+                    k8s_uri: models/k8s/image_recognition/tensorflow/resnet50v1_5/training/fp32/.docs/kubernetes.md
                   - name: Advanced Options
                     uri: models/quickstart/image_recognition/tensorflow/resnet50v1_5/training/fp32/.docs/advancedoptions.md
                   - name: License link
                     uri: models/quickstart/image_recognition/tensorflow/resnet50v1_5/training/fp32/.docs/license.md
+                    k8s_uri: models/k8s/image_recognition/tensorflow/resnet50v1_5/training/fp32/.docs/license.md
           args:
               - PACKAGE_NAME=resnet50v1-5-fp32-training
+              - K8S_PACKAGE_NAME=resnet50v1-5-fp32-training-k8s
           files:
               - source: benchmarks/common
                 destination: benchmarks/common
@@ -66,6 +79,8 @@ slice_sets:
               - source: models/image_recognition/tensorflow/resnet50v1_5/training
                 destination: models/image_recognition/tensorflow/resnet50v1_5/training
               - source: quickstart/image_recognition/tensorflow/resnet50v1_5/training/fp32
+                k8s_source: k8s/image_recognition/tensorflow/resnet50v1_5/training/fp32
                 destination: quickstart
               - source: quickstart/common
+                k8s_source: k8s/common
                 destination: quickstart/common
