--- a/tools/docker/specs/tensorflow/bert-large-int8-inference_spec.yml
+++ b/tools/docker/specs/tensorflow/bert-large-int8-inference_spec.yml
@@ -38,6 +38,47 @@ slice_sets:
           <precision>: Int8
           <use case>: language_modeling
         uri: models/quickstart/language_modeling/tensorflow/bert_large/inference/cpu/int8
+      - docs:
+        - name: Title
+          uri: models/quickstart/language_modeling/tensorflow/bert_large/inference/cpu/int8/.docs/title.md
+        - name: Description
+          uri: models/quickstart/language_modeling/tensorflow/bert_large/inference/cpu/int8/.docs/description.md
+        - name: Datasets
+          uri: models/quickstart/language_modeling/tensorflow/bert_large/inference/cpu/int8/.docs/datasets.md
+        - name: Quick Start Scripts
+          uri: models/quickstart/language_modeling/tensorflow/bert_large/inference/cpu/int8/.docs/quickstart.md
+        - name: Bare Metal
+          uri: models/quickstart/language_modeling/tensorflow/bert_large/inference/cpu/int8/.docs/baremetal_from_repo.md
+        - name: Resources
+          uri: models/quickstart/common/.docs/resources.md
+        name: README.md
+        text_replace:
+          <mode>: inference
+          <model name>: BERT Large
+          <precision>: Int8
+          <use case>: language_modeling
+        uri: models/benchmarks/language_modeling/tensorflow/bert_large/inference/int8
+      - docs:
+        - name: Title
+          uri: models/quickstart/common/.docs/advanced/title.md
+        - name: Description
+          uri: models/quickstart/common/.docs/advanced/description.md
+        - name: Setup
+          uri: models/quickstart/common/.docs/advanced/setup.md
+        - name: Docker arg
+          uri: models/quickstart/common/.docs/advanced/docker_arg.md
+        - name: Launch benchmark instructions
+          uri: models/benchmarks/language_modeling/tensorflow/bert_large/inference/int8/.docs/advanced/launch_benchmark_instructions.md
+        - name: Model args
+          uri: models/benchmarks/language_modeling/tensorflow/bert_large/inference/int8/.docs/advanced/model_args.md
+        name: Advanced.md
+        text_replace:
+          <mode>: inference
+          <model name>: BERT Large
+          <precision>: Int8
+          <use case>: language_modeling
+          <docker image>: 'intel/intel-optimized-tensorflow:tf-r2.5-icx-b631821f'
+        uri: models/benchmarks/language_modeling/tensorflow/bert_large/inference/int8
     downloads:
       - source: https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_4_0/asymmetric_per_channel_bert_int8.pb
         destination: pretrained_model/asymmetric_per_channel_bert_int8.pb
