--- a/tools/docker/specs/tensorflow/faster-rcnn-fp32-inference_spec.yml
+++ b/tools/docker/specs/tensorflow/faster-rcnn-fp32-inference_spec.yml
@@ -39,6 +39,46 @@ slice_sets:
           <precision>: FP32
           <use case>: object_detection
         uri: models/quickstart/object_detection/tensorflow/faster_rcnn/inference/cpu/fp32
+      - docs:
+        - name: Title
+          uri: models/quickstart/object_detection/tensorflow/faster_rcnn/inference/cpu/fp32/.docs/title.md
+        - name: Description
+          uri: models/quickstart/object_detection/tensorflow/faster_rcnn/inference/cpu/fp32/.docs/description.md
+        - name: Datasets
+          uri: models/quickstart/object_detection/tensorflow/faster_rcnn/inference/cpu/fp32/.docs/datasets.md
+        - name: Quick Start Scripts
+          uri: models/quickstart/object_detection/tensorflow/faster_rcnn/inference/cpu/fp32/.docs/quickstart.md
+        - name: AI Kit
+          uri: models/quickstart/object_detection/tensorflow/faster_rcnn/inference/cpu/fp32/.docs/aikit.md
+        - name: Resources
+          uri: models/quickstart/common/.docs/resources_with_portal_link.md
+        name: README.md
+        text_replace:
+          <mode>: inference
+          <model name>: Faster R-CNN
+          <precision>: FP32
+          <use case>: object_detection
+          <workload container url>: https://software.intel.com/content/www/us/en/develop/articles/containers/faster-rcnn-fp32-inference-tensorflow-container.html
+        uri: models/benchmarks/object_detection/tensorflow/faster_rcnn/inference/fp32
+      - docs:
+        - name: Title
+          uri: models/quickstart/common/.docs/advanced/title.md
+        - name: Description
+          uri: models/quickstart/common/.docs/advanced/description.md
+        - name: Setup
+          uri: models/quickstart/common/.docs/advanced/setup.md
+        - name: Docker arg
+          uri: models/quickstart/common/.docs/advanced/docker_arg.md
+        - name: Launch benchmark instructions
+          uri: models/benchmarks/object_detection/tensorflow/faster_rcnn/inference/fp32/.docs/advanced/launch_benchmark_instructions.md
+        name: Advanced.md
+        text_replace:
+          <mode>: inference
+          <model name>: Faster R-CNN
+          <precision>: FP32
+          <use case>: object_detection
+          <docker image>: 'intel/intel-optimized-tensorflow:2.4.0'
+        uri: models/benchmarks/object_detection/tensorflow/faster_rcnn/inference/fp32
     downloads:
     - source: https://storage.googleapis.com/intel-optimized-tensorflow/models/faster_rcnn_resnet50_fp32_coco_pretrained_model.tar.gz
       destination: faster_rcnn_resnet50_fp32_coco_pretrained_model.tar.gz
