--- a/tools/docker/specs/tensorflow/wide-deep-large-ds-fp32-training_spec.yml
+++ b/tools/docker/specs/tensorflow/wide-deep-large-ds-fp32-training_spec.yml
@@ -69,3 +69,43 @@ slice_sets:
           uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/training/cpu/fp32/.docs/advancedoptions.md
         - name: License link
           uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/training/cpu/fp32/.docs/license.md
+      - name: README.md
+        uri: models/benchmarks/recommendation/tensorflow/wide_deep_large_ds/training/fp32
+        text_replace:
+          <mode>: training
+          <model name>: Wide and Deep Large Dataset
+          <precision>: FP32
+          <use case>: recommendation
+          <workload container url>: https://software.intel.com/content/www/us/en/develop/articles/containers/wide-deep-large-dataset-fp32-training-tensorflow-container.html
+        docs:
+        - name: Title
+          uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/training/cpu/fp32/.docs/title.md
+        - name: Description
+          uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/training/cpu/fp32/.docs/description.md
+        - name: Datasets
+          uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/training/cpu/fp32/.docs/datasets.md
+        - name: Quick Start Scripts
+          uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/training/cpu/fp32/.docs/quickstart.md
+        - name: AI Kit
+          uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/training/cpu/fp32/.docs/aikit.md
+        - name: Resources
+          uri: models/quickstart/common/.docs/resources_with_portal_link.md
+      - docs:
+        - name: Title
+          uri: models/quickstart/common/.docs/advanced/title.md
+        - name: Description
+          uri: models/quickstart/common/.docs/advanced/description.md
+        - name: Setup
+          uri: models/quickstart/common/.docs/advanced/setup.md
+        - name: Docker arg
+          uri: models/quickstart/common/.docs/advanced/docker_arg.md
+        - name: Launch benchmark instructions
+          uri: models/benchmarks/recommendation/tensorflow/wide_deep_large_ds/training/fp32/.docs/advanced/launch_benchmark_instructions.md
+        name: Advanced.md
+        text_replace:
+          <mode>: training
+          <model name>: Wide and Deep using a large dataset
+          <precision>: FP32
+          <use case>: recommendation
+          <docker image>: intel/intel-optimized-tensorflow:2.4.0
+        uri: models/benchmarks/recommendation/tensorflow/wide_deep_large_ds/training/int8
