--- a/tools/docker/specs/tensorflow/wide-deep-large-ds-int8-inference_spec.yml
+++ b/tools/docker/specs/tensorflow/wide-deep-large-ds-int8-inference_spec.yml
@@ -38,6 +38,46 @@ slice_sets:
           <precision>: Int8
           <use case>: recommendation
         uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/inference/cpu/int8
+      - docs:
+        - name: Title
+          uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/inference/cpu/int8/.docs/title.md
+        - name: Description
+          uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/inference/cpu/int8/.docs/description.md
+        - name: Datasets
+          uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/inference/cpu/int8/.docs/datasets.md
+        - name: Quick Start Scripts
+          uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/inference/cpu/int8/.docs/quickstart.md
+        - name: AI Kit
+          uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/inference/cpu/int8/.docs/aikit.md
+        - name: Resources
+          uri: models/quickstart/common/.docs/resources_with_portal_link.md
+        name: README.md
+        text_replace:
+          <mode>: inference
+          <model name>: Wide and Deep using a large dataset
+          <precision>: Int8
+          <use case>: recommendation
+          <workload container url>: https://software.intel.com/content/www/us/en/develop/articles/containers/wide-deep-large-dataset-int8-inference-tensorflow-container.html
+        uri: models/benchmarks/recommendation/tensorflow/wide_deep_large_ds/inference/int8
+      - docs:
+        - name: Title
+          uri: models/quickstart/common/.docs/advanced/title.md
+        - name: Description
+          uri: models/quickstart/common/.docs/advanced/description.md
+        - name: Setup
+          uri: models/quickstart/common/.docs/advanced/setup.md
+        - name: Docker arg
+          uri: models/quickstart/common/.docs/advanced/docker_arg.md
+        - name: Launch benchmark instructions
+          uri: models/benchmarks/recommendation/tensorflow/wide_deep_large_ds/inference/int8/.docs/advanced/launch_benchmark_instructions.md
+        name: Advanced.md
+        text_replace:
+          <mode>: inference
+          <model name>: Wide and Deep using a large dataset
+          <precision>: Int8
+          <use case>: recommendation
+          <docker image>: intel/intel-optimized-tensorflow:1.15.2
+        uri: models/benchmarks/recommendation/tensorflow/wide_deep_large_ds/inference/int8
     downloads:
     - destination: wide_deep_int8_pretrained_model.pb
       source: https://storage.googleapis.com/intel-optimized-tensorflow/models/v1_8/wide_deep_int8_pretrained_model.pb
