--- a/tools/docker/specs/tensorflow/faster-rcnn-fp32-inference_spec.yml
+++ b/tools/docker/specs/tensorflow/faster-rcnn-fp32-inference_spec.yml
@@ -77,7 +77,7 @@ slice_sets:
           <model name>: Faster R-CNN
           <precision>: FP32
           <use case>: object_detection
-          <docker image>: 'intel/intel-optimized-tensorflow:2.4.0'
+          <docker image>: intel/intel-optimized-tensorflow:1.15.2
         uri: models/benchmarks/object_detection/tensorflow/faster_rcnn/inference/fp32
     downloads:
     - source: https://storage.googleapis.com/intel-optimized-tensorflow/models/faster_rcnn_resnet50_fp32_coco_pretrained_model.tar.gz
