--- a/tools/docker/specs/tensorflow/faster-rcnn-int8-inference_spec.yml
+++ b/tools/docker/specs/tensorflow/faster-rcnn-int8-inference_spec.yml
@@ -77,7 +77,7 @@ slice_sets:
           <model name>: Faster R-CNN
           <precision>: Int8
           <use case>: object_detection
-          <docker image>: 'intel/intel-optimized-tensorflow:2.4.0'
+          <docker image>: intel/intel-optimized-tensorflow:1.15.2
         uri: models/benchmarks/object_detection/tensorflow/faster_rcnn/inference/int8
     downloads:
     - destination: faster_rcnn_int8_pretrained_model.pb
