--- a/tools/docker/specs/tensorflow/maskrcnn-fp32-inference_spec.yml
+++ b/tools/docker/specs/tensorflow/maskrcnn-fp32-inference_spec.yml
@@ -38,6 +38,46 @@ slice_sets:
           <precision>: FP32
           <use case>: image_segmentation
         uri: models/quickstart/image_segmentation/tensorflow/maskrcnn/inference/cpu/fp32
+      - name: README.md
+        text_replace:
+          <mode>: inference
+          <model name>: Mask R-CNN
+          <precision>: FP32
+          <use case>: image_segmentation
+          <workload container url>: https://software.intel.com/content/www/us/en/develop/articles/containers/mask-rcnn-fp32-inference-tensorflow-container.html
+        uri: models/benchmarks/image_segmentation/tensorflow/maskrcnn/inference/fp32
+        docs:
+        - name: Title
+          uri: models/quickstart/image_segmentation/tensorflow/maskrcnn/inference/cpu/fp32/.docs/title.md
+        - name: Description
+          uri: models/quickstart/image_segmentation/tensorflow/maskrcnn/inference/cpu/fp32/.docs/description.md
+        - name: Datasets
+          uri: models/quickstart/image_segmentation/tensorflow/maskrcnn/inference/cpu/fp32/.docs/datasets.md
+        - name: Quick Start Scripts
+          uri: models/quickstart/image_segmentation/tensorflow/maskrcnn/inference/cpu/fp32/.docs/quickstart.md
+        - name: AI Kit
+          uri: models/quickstart/image_segmentation/tensorflow/maskrcnn/inference/cpu/fp32/.docs/aikit.md
+        - name: Resources
+          uri: models/quickstart/common/.docs/resources_with_portal_link.md
+      - name: Advanced.md
+        text_replace:
+          <mode>: inference
+          <model name>: Mask R-CNN
+          <precision>: FP32
+          <use case>: image_segmentation
+          <docker image>: 'intel/intel-optimized-tensorflow:1.15.2'
+        uri: models/benchmarks/image_segmentation/tensorflow/maskrcnn/inference/fp32
+        docs:
+        - name: Title
+          uri: models/quickstart/common/.docs/advanced/title.md
+        - name: Description
+          uri: models/quickstart/common/.docs/advanced/description.md
+        - name: Setup
+          uri: models/quickstart/common/.docs/advanced/setup.md
+        - name: Docker arg
+          uri: models/quickstart/common/.docs/advanced/docker_arg.md
+        - name: Launch benchmark instructions
+          uri: models/benchmarks/image_segmentation/tensorflow/maskrcnn/inference/fp32/.docs/advanced/launch_benchmark_instructions.md
     downloads: []
     files:
     - destination: benchmarks/common
