--- a/tools/docker/specs/tensorflow/rfcn-fp32-inference_spec.yml
+++ b/tools/docker/specs/tensorflow/rfcn-fp32-inference_spec.yml
@@ -42,6 +42,46 @@ slice_sets:
                     uri: models/quickstart/object_detection/tensorflow/rfcn/inference/cpu/fp32/.docs/docker.md
                   - name: License link
                     uri: models/quickstart/object_detection/tensorflow/rfcn/inference/cpu/fp32/.docs/license.md
+            - name: README.md
+              uri: models/benchmarks/object_detection/tensorflow/rfcn/inference/fp32
+              text_replace:
+                <model name>: RFCN
+                <precision>: FP32
+                <mode>: inference
+                <use case>: object_detection
+                <workload container url>: https://software.intel.com/content/www/us/en/develop/articles/containers/rfcn-fp32-inference-tensorflow-container.html
+              docs:
+              - name: Title
+                uri: models/quickstart/object_detection/tensorflow/rfcn/inference/cpu/fp32/.docs/title.md
+              - name: Description
+                uri: models/quickstart/object_detection/tensorflow/rfcn/inference/cpu/fp32/.docs/description.md
+              - name: Datasets
+                uri: models/quickstart/object_detection/tensorflow/rfcn/inference/cpu/fp32/.docs/datasets.md
+              - name: Quick Start Scripts
+                uri: models/quickstart/object_detection/tensorflow/rfcn/inference/cpu/fp32/.docs/quickstart.md
+              - name: AI Kit
+                uri: models/quickstart/object_detection/tensorflow/rfcn/inference/cpu/fp32/.docs/aikit.md
+              - name: Resources
+                uri: models/quickstart/common/.docs/resources_with_portal_link.md
+            - docs:
+              - name: Title
+                uri: models/quickstart/common/.docs/advanced/title.md
+              - name: Description
+                uri: models/quickstart/common/.docs/advanced/description.md
+              - name: Setup
+                uri: models/quickstart/common/.docs/advanced/setup.md
+              - name: Docker arg
+                uri: models/quickstart/common/.docs/advanced/docker_arg.md
+              - name: Launch benchmark instructions
+                uri: models/benchmarks/object_detection/tensorflow/rfcn/inference/fp32/.docs/advanced/launch_benchmark_instructions.md
+              name: Advanced.md
+              text_replace:
+                <model name>: RFCN
+                <precision>: FP32
+                <mode>: inference
+                <use case>: object_detection
+                <docker image>: 'intel/intel-optimized-tensorflow:2.4.0'
+              uri: models/benchmarks/object_detection/tensorflow/rfcn/inference/fp32
           args:
               - TF_MODELS_BRANCH=6c21084503b27a9ab118e1db25f79957d5ef540b
               - PACKAGE_NAME=rfcn-fp32-inference
