--- a/tools/docker/specs/tensorflow/ssd-mobilenet-int8-inference_spec.yml
+++ b/tools/docker/specs/tensorflow/ssd-mobilenet-int8-inference_spec.yml
@@ -38,6 +38,46 @@ slice_sets:
           <precision>: Int8
           <use case>: object_detection
         uri: models/quickstart/object_detection/tensorflow/ssd-mobilenet/inference/cpu/int8
+      - docs:
+        - name: Title
+          uri: models/quickstart/object_detection/tensorflow/ssd-mobilenet/inference/cpu/int8/.docs/title.md
+        - name: Description
+          uri: models/quickstart/object_detection/tensorflow/ssd-mobilenet/inference/cpu/int8/.docs/description.md
+        - name: Datasets
+          uri: models/quickstart/object_detection/tensorflow/ssd-mobilenet/inference/cpu/int8/.docs/datasets.md
+        - name: Quick Start Scripts
+          uri: models/quickstart/object_detection/tensorflow/ssd-mobilenet/inference/cpu/int8/.docs/quickstart.md
+        - name: AI Kit
+          uri: models/quickstart/object_detection/tensorflow/ssd-mobilenet/inference/cpu/int8/.docs/aikit.md
+        - name: Resources
+          uri: models/quickstart/common/.docs/resources_with_portal_link.md
+        name: README.md
+        text_replace:
+          <mode>: inference
+          <model name>: SSD-MobileNet
+          <precision>: Int8
+          <use case>: object_detection
+          <workload container url>: https://software.intel.com/content/www/us/en/develop/articles/containers/ssd-mobilenet-int8-inference-tensorflow-container.html
+        uri: models/benchmarks/object_detection/tensorflow/ssd-mobilenet/inference/int8
+      - docs:
+        - name: Title
+          uri: models/quickstart/common/.docs/advanced/title.md
+        - name: Description
+          uri: models/quickstart/common/.docs/advanced/description.md
+        - name: Setup
+          uri: models/quickstart/common/.docs/advanced/setup.md
+        - name: Docker arg
+          uri: models/quickstart/common/.docs/advanced/docker_arg.md
+        - name: Launch benchmark instructions
+          uri: models/benchmarks/object_detection/tensorflow/ssd-mobilenet/inference/int8/.docs/advanced/launch_benchmark_instructions.md
+        name: Advanced.md
+        text_replace:
+          <mode>: inference
+          <model name>: SSD-MobileNet
+          <precision>: Int8
+          <use case>: object_detection
+          <docker image>: 'intel/intel-optimized-tensorflow:2.4.0'
+        uri: models/benchmarks/object_detection/tensorflow/ssd-mobilenet/inference/int8
     downloads:
     - destination: ssdmobilenet_int8_pretrained_model_combinedNMS_s8.pb
       source: https://storage.googleapis.com/intel-optimized-tensorflow/models/v1_8/ssdmobilenet_int8_pretrained_model_combinedNMS_s8.pb
