--- a/tools/docker/specs/tensorflow/wavenet-fp32-inference_spec.yml
+++ b/tools/docker/specs/tensorflow/wavenet-fp32-inference_spec.yml
@@ -38,6 +38,44 @@ slice_sets:
           <precision>: FP32
           <use case>: text_to_speech
         uri: models/quickstart/text_to_speech/tensorflow/wavenet/inference/cpu/fp32
+      - docs:
+        - name: Title
+          uri: models/quickstart/text_to_speech/tensorflow/wavenet/inference/cpu/fp32/.docs/title.md
+        - name: Description
+          uri: models/quickstart/text_to_speech/tensorflow/wavenet/inference/cpu/fp32/.docs/description.md
+        - name: Quick Start Scripts
+          uri: models/quickstart/text_to_speech/tensorflow/wavenet/inference/cpu/fp32/.docs/quickstart.md
+        - name: AI Kit
+          uri: models/quickstart/text_to_speech/tensorflow/wavenet/inference/cpu/fp32/.docs/aikit.md
+        - name: Resources
+          uri: models/quickstart/common/.docs/resources_with_portal_link.md
+        name: README.md
+        text_replace:
+          <mode>: inference
+          <model name>: WaveNet
+          <precision>: FP32
+          <use case>: text_to_speech
+          <workload container url>: https://software.intel.com/content/www/us/en/develop/articles/containers/wavenet-fp32-inference-tensorflow-container.html
+        uri: models/benchmarks/text_to_speech/tensorflow/wavenet/inference/fp32
+      - docs:
+        - name: Title
+          uri: models/quickstart/common/.docs/advanced/title.md
+        - name: Description
+          uri: models/quickstart/common/.docs/advanced/description.md
+        - name: Setup
+          uri: models/quickstart/common/.docs/advanced/setup.md
+        - name: Docker arg
+          uri: models/quickstart/common/.docs/advanced/docker_arg.md
+        - name: Launch benchmark instructions
+          uri: models/benchmarks/text_to_speech/tensorflow/wavenet/inference/fp32/.docs/advanced/launch_benchmark_instructions.md
+        name: Advanced.md
+        text_replace:
+          <mode>: inference
+          <model name>: WaveNet
+          <precision>: FP32
+          <use case>: text_to_speech
+          <docker image>: intel/intel-optimized-tensorflow:1.15.2
+        uri: models/benchmarks/text_to_speech/tensorflow/wavenet/inference/fp32
     downloads:
     - destination: pretrained_model/wavenet_fp32_pretrained_model.tar.gz
       source: https://storage.googleapis.com/intel-optimized-tensorflow/models/wavenet_fp32_pretrained_model.tar.gz
