--- a/tools/docker/specs/tensorflow/ssd-resnet34-fp32-inference_spec.yml
+++ b/tools/docker/specs/tensorflow/ssd-resnet34-fp32-inference_spec.yml
@@ -43,6 +43,46 @@ slice_sets:
           <package dir>: ssd-resnet34-fp32-inference
           <docker image>: intel/object-detection:tf-latest-ssd-resnet34-fp32-inference
         uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/inference/cpu/fp32
+      - docs:
+        - name: Title
+          uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/inference/cpu/fp32/.docs/title.md
+        - name: Description
+          uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/inference/cpu/fp32/.docs/description.md
+        - name: Datasets
+          uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/inference/cpu/fp32/.docs/datasets.md
+        - name: Quick Start Scripts
+          uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/inference/cpu/fp32/.docs/quickstart.md
+        - name: AI Kit
+          uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/inference/cpu/fp32/.docs/aikit.md
+        - name: Resources
+          uri: models/quickstart/common/.docs/resources_with_portal_link.md
+        name: README.md
+        text_replace:
+          <mode>: inference
+          <model name>: SSD-ResNet34
+          <precision>: FP32
+          <use case>: object_detection
+          <workload container url>: https://software.intel.com/content/www/us/en/develop/articles/containers/ssd-resnet34-fp32-inference-tensorflow-container.html
+        uri: models/benchmarks/object_detection/tensorflow/ssd-resnet34/inference/fp32
+      - docs:
+        - name: Title
+          uri: models/quickstart/common/.docs/advanced/title.md
+        - name: Description
+          uri: models/quickstart/common/.docs/advanced/description.md
+        - name: Setup
+          uri: models/quickstart/common/.docs/advanced/setup.md
+        - name: Docker arg
+          uri: models/quickstart/common/.docs/advanced/docker_arg.md
+        - name: Launch benchmark instructions
+          uri: models/benchmarks/object_detection/tensorflow/ssd-resnet34/inference/fp32/.docs/advanced/launch_benchmark_instructions.md
+        name: Advanced.md
+        text_replace:
+          <mode>: inference
+          <model name>: SSD-ResNet34
+          <precision>: FP32
+          <use case>: object_detection
+          <docker image>: 'intel/intel-optimized-tensorflow:latest'
+        uri: models/benchmarks/object_detection/tensorflow/ssd-resnet34/inference/fp32
     downloads:
     - source: https://storage.googleapis.com/intel-optimized-tensorflow/models/v1_6/ssd_resnet34_fp32_bs1_pretrained_model.pb
       destination: pretrained_model/ssd_resnet34_fp32_bs1_pretrained_model.pb
@@ -73,6 +113,8 @@ slice_sets:
       source: models/object_detection/tensorflow/ssd-resnet34/inference/tensorflow_benchmarks_tf2.0.patch
     - destination: models/object_detection/tensorflow/ssd-resnet34/inference/tensorflow_models_tf2.0.patch
       source: models/object_detection/tensorflow/ssd-resnet34/inference/tensorflow_models_tf2.0.patch
+    - destination: models/object_detection/tensorflow/ssd-resnet34/inference/tf_benchmarks.patch
+      source: models/object_detection/tensorflow/ssd-resnet34/inference/tf_benchmarks.patch
     - destination: quickstart/common
       source: quickstart/common
     - destination: quickstart
