--- a/tools/docker/specs/tensorflow/ssd-resnet34-fp32-training_spec.yml
+++ b/tools/docker/specs/tensorflow/ssd-resnet34-fp32-training_spec.yml
@@ -39,6 +39,46 @@ slice_sets:
           <precision>: FP32
           <use case>: object_detection
         uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/training/cpu/fp32
+      - docs:
+        - name: Title
+          uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/training/cpu/fp32/.docs/title.md
+        - name: Description
+          uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/training/cpu/fp32/.docs/description.md
+        - name: Datasets
+          uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/training/cpu/fp32/.docs/datasets.md
+        - name: Quick Start Scripts
+          uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/training/cpu/fp32/.docs/quickstart.md
+        - name: AI Kit
+          uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/training/cpu/fp32/.docs/aikit.md
+        - name: Resources
+          uri: models/quickstart/common/.docs/resources_with_portal_link.md
+        name: README.md
+        text_replace:
+          <mode>: training
+          <model name>: SSD-ResNet34
+          <precision>: FP32
+          <use case>: object_detection
+          <workload container url>: https://software.intel.com/content/www/us/en/develop/articles/containers/ssd-resnet34-fp32-training-tensorflow-container.html
+        uri: models/benchmarks/object_detection/tensorflow/ssd-resnet34/training/fp32
+      - docs:
+        - name: Title
+          uri: models/quickstart/common/.docs/advanced/title.md
+        - name: Description
+          uri: models/quickstart/common/.docs/advanced/description.md
+        - name: Setup
+          uri: models/quickstart/common/.docs/advanced/setup.md
+        - name: Docker arg
+          uri: models/quickstart/common/.docs/advanced/docker_arg.md
+        - name: Launch benchmark instructions
+          uri: models/benchmarks/object_detection/tensorflow/ssd-resnet34/training/fp32/.docs/advanced/launch_benchmark_instructions.md
+        name: Advanced.md
+        text_replace:
+          <mode>: training
+          <model name>: SSD-ResNet34
+          <precision>: FP32
+          <use case>: object_detection
+          <docker image>: 'intel/intel-optimized-tensorflow:latest'
+        uri: models/benchmarks/object_detection/tensorflow/ssd-resnet34/training/fp32
     downloads: []
     files:
     - destination: benchmarks/common
@@ -65,6 +105,8 @@ slice_sets:
       source: models/common
     - destination: models/object_detection/tensorflow/ssd-resnet34/training/fp32
       source: models/object_detection/tensorflow/ssd-resnet34/training/fp32
+    - destination: models/object_detection/tensorflow/ssd-resnet34/training/nhwc-bug-fix.diff
+      source: models/object_detection/tensorflow/ssd-resnet34/training/nhwc-bug-fix.diff
     - destination: quickstart/common
       source: quickstart/common
     - destination: quickstart
